--- a/examples/sft/megatron/docker-compose.yml
+++ b/examples/sft/megatron/docker-compose.yml
@@ -1,83 +1,51 @@
-version: '3'
-
 services:
   ray-head:
-    image: nvcr.io/nvidia/pytorch:23.12-py3
+    image: nvcr.io/nvidia/pytorch:25.03-py3
     container_name: ray-head
+    runtime: nvidia
     ports:
       - "8265:8265"  # Ray dashboard
       - "6379:6379"  # Redis port
       - "10001:10001"  # Ray object manager
       - "8080:8080"   # Web visualization (if any)
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=0,1  # Use 2 GPUs for the head node
+      - RAY_HEAD_IP=ray-head
     volumes:
       - ../../..:/workspace/verl  # Mount the verl repository
-      - /path/to/data:/workspace/data  # Replace with your data path
-      - /path/to/checkpoints:/workspace/checkpoints  # Replace with your checkpoint path
-    environment:
-      - NVIDIA_VISIBLE_DEVICES=0,1,2,3  # Adjust according to your GPU setup
-      - CUDA_VISIBLE_DEVICES=0,1,2,3
-      - RAY_HEAD_IP=ray-head
-      - RAY_NUM_GPUS=4  # Change based on your setup
+      - /path/to/data:/workspace/data  # Data path
+      - /path/to/checkpoints:/workspace/checkpoints  # Checkpoint path
+    shm_size: 1g
+    ulimits:
+      memlock: -1
+      stack: 67108864
     command: >
       bash -c "cd /workspace/verl && 
                pip install --no-cache-dir -e . &&
                pip install ray[default]==2.9.3 &&
                pip install nvtx wandb transformers accelerate &&
-               python -m ray.init --head --port=6379 --dashboard-host=0.0.0.0 --num-gpus=4 &&
+               ray start --head --port=6379 --dashboard-host=0.0.0.0 --num-gpus=2 &&
                sleep infinity"
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 4  # Adjust based on your GPU availability
-              capabilities: [gpu]
-    networks:
-      - ray_network
-
-  ray-worker:
-    image: nvcr.io/nvidia/pytorch:23.12-py3
-    depends_on:
-      - ray-head
-    volumes:
-      - ../../..:/workspace/verl  # Mount the verl repository
-      - /path/to/data:/workspace/data  # Replace with your data path
-      - /path/to/checkpoints:/workspace/checkpoints  # Replace with your checkpoint path
-    environment:
-      - NVIDIA_VISIBLE_DEVICES=4,5,6,7  # Adjust according to your GPU setup
-      - CUDA_VISIBLE_DEVICES=0,1,2,3
-      - RAY_HEAD_IP=ray-head
-      - RAY_NUM_GPUS=4  # Change based on your setup
-    command: >
-      bash -c "cd /workspace/verl && 
-               pip install --no-cache-dir -e . &&
-               pip install ray[default]==2.9.3 &&
-               pip install nvtx wandb transformers accelerate &&
-               python -m ray.init --address=ray-head:6379 --num-gpus=4 &&
-               sleep infinity"
-    deploy:
-      replicas: 1  # Adjust number of worker nodes as needed
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 4  # Adjust based on your GPU availability
-              capabilities: [gpu]
     networks:
       - ray_network
 
   # Container for running megatron SFT example
   megatron-sft:
-    image: nvcr.io/nvidia/pytorch:23.12-py3
+    image: nvcr.io/nvidia/pytorch:25.03-py3
     container_name: megatron-sft
+    runtime: nvidia
     depends_on:
       - ray-head
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=0,1  # Use 2 GPUs
     volumes:
       - ../../..:/workspace/verl  # Mount the verl repository
-      - /path/to/data:/workspace/data  # Replace with your data path
-      - /path/to/checkpoints:/workspace/checkpoints  # Replace with your checkpoint path
-    environment:
-      - NVIDIA_VISIBLE_DEVICES=0,1,2,3,4,5,6,7  # Adjust according to your GPU setup
+      - /path/to/data:/workspace/data  # Data path
+      - /path/to/checkpoints:/workspace/checkpoints  # Checkpoint path
+    shm_size: 1g
+    ulimits:
+      memlock: -1
+      stack: 67108864
     command: >
       bash -c "cd /workspace/verl && 
                pip install --no-cache-dir -e . &&
@@ -91,15 +59,8 @@ services:
                cd /workspace/verl &&
                # Sleep to allow Ray to initialize fully
                sleep 10 &&
-               # Run the example script
-               bash examples/sft/megatron/run_llama2_7b_megatron.sh 8 /workspace/checkpoints/llama2-7b-megatron-sft"
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 8  # Adjust based on your GPU availability
-              capabilities: [gpu]
+               # Run the Megatron example script
+               bash examples/sft/megatron/run_llama2_7b_megatron.sh 2 /workspace/checkpoints/llama2-7b-megatron-sft"
     networks:
       - ray_network
 
